# mecris

./: .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  ACTIVE_BACKLOG.md  AGENTS.md  ANTHROPIC_COST_USAGE_NOTES.md  ARCHITECTURE.md  BORIS_FIONA_HANDOFF.md  CHECK_IN_NOV_16.md  CHECK_IN_NOV_23.md  CHECK_IN_OCT_19.md  CHECK_IN_OCT_24.md  CLAUDE.md  CLAUDE.md.obsolete  CLAUDE_CODE_CLI_ANALYSIS.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_SAYS.md  CLAUDE_PROMPT_TEMPLATE.md  CONSTITUTION.md  CONTRIBUTING.md  CONTROL_LOOP_SPEC.md  COVERAGE_REPORT.md  DOCUMENTATION_ARCHITECTURE_PLAN.md  DOCUMENTATION_CLEANUP_PLAN.md  ENHANCEMENT_ASSESSMENT.md  GEMINI.md  GITHUB_ISSUES_SETUP.md  GPT_SAYS.md  LICENSE.md  MACOS_GSED_WORKAROUND.md  MECRIS_SYSTEM_GUIDE.md  Makefile  NEXT_PRIORITIES.md  NEXT_PRIORITIES_BETA3_TO_GA.md  NEXT_SESSION.md  PORTABILITY.md  PR_DESCRIPTION.md  README.md  (+83 more)
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json  skills
.mcp/: mecris.json
attic/: CLAUDE.md  DORMANT_BACKLOG.md  NEXT_SESSION_2026-03-20.md  README.md  data_backup_sms.json.migrated  mecris_usage.db  setup_sms_consent.py  sms_consent.json.example
boris-fiona-walker/: .envrc.template  .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  DEVELOPMENT.md  HANDOFF_PRODUCTION.md  HANDOFF_TESTING.md  LOCAL_VERIFICATION_GUIDE.md  Makefile  README.md  SECURITY_ASSESSMENT_REPORT.md  TESTING.md  spin.toml
boris-fiona-walker/.github/workflows/: walk-reminder-cron.yml
boris-fiona-walker/src/: beeminder.rs  daylight.rs  lib.rs  sms.rs  time.rs  weather.rs
boris-fiona-walker/tests/: e2e_tests.rs  integration_tests.rs
cli/: main.py  pulse.py
data/: approved_templates.json  clever_templates.json  fixed_templates.json  pending_templates.json  sms_consent.json
docker/: hcat.Dockerfile
docs/: A2P_COMPLIANCE_GUIDE.md  AGENT_AGENDA_DESIGN.md  AGENT_OPS_RUNBOOK.md  AI_FRAMEWORK_EVALUATION.md  AKAMAI_CRON_EVALUATION.md  ANDROID_APP_DESIGN.md  AUTH_CLI_DESIGN.md  AUTH_CONFIGURATION.md  AUTOMATE_REVIEWSTACK_GOAL.md  BACKEND_DECISION_ENGINE.md  BEEMINDER_ACTIVITY_TRACKING.md  BEEMINDER_ASYNC_LORE.md  BEEMINDER_LORE_CATALOG.md  BEEMINDER_PRIORITY_LORE.md  BOOTSTRAP_KEY_MANAGEMENT.md  BUDGET_GOVERNOR_GUIDANCE.md  BUDGET_GOVERNOR_SPEC.md  BUDGET_UPDATE_GUIDE.md  BUG_REPORT_STEP_DISCREPANCY.md  CDD_INTELLIGENT_REMINDERS.md  CI_CD_EVOLUTION_PLAN.md  CLAUDE_API_LIMITATIONS.md  CLAUDE_CODE_NOCLOD_INTEGRATION.md  CONTEXT_DECISION_DOCUMENT.md  CONTROL_LOOP_SPEC.md  CONVERSION_PROCESS.md  COOPERATIVE_WORKERS_DESIGN.md  COZYBEBY.md  DATA_ARCHITECTURE_AND_PRIVACY.md  DELIVERY_CONFIGURATION_GUIDE.md  Deployment_Plan_CDD.md  ENHANCEMENT_MULTI_TENANT_DEFAULT_USER.md  FINAL_IMPLEMENTATION_SUMMARY.md  FORMALIZATION_PLAN.md  GETTING_STARTED.md  GHOST_ARCHIVIST_SPEC.md  GROQ_CLAUDE_CODE_SUMMARY.md  GROQ_ODOMETER_SOLUTION.md  HISTORY_AND_LORE.md  INTELLIGENT_REMINDER_SYSTEM.md  (+78 more)
ghost/: __init__.py  archivist.py  archivist_logic.py  copilot_loopback.py  headless_loopback.py  post_mortem.py  presence.py
logs/: mecris_test_report_20250806_130042.json
mecris-core/: Cargo.toml
mecris-go/: README.md  TDG.md
mecris-go-project/: README.md  settings.gradle.kts
mecris-go-spin/: DEPLOYMENT.md  schema.sql
mecris-go-spin/budget-governor-rs/: Cargo.toml
mecris-go-spin/budget-governor-rs/src/: lib.rs
mecris-go-spin/review-pump/: Cargo.toml
mecris-go-spin/review-pump/src/: lib.rs
mecris-go-spin/review-pump/wit/: review-pump.wit
mecris-go-spin/sync-service/: Cargo.toml  spin.toml
mecris-go-spin/sync-service/language-service/: app.py
mecris-go-spin/sync-service/src/: lib.rs  lib.rs.bak
py_harness/: main.py  mcp_client.py  mecris_harness.py  ollama_client.py
scripts/: add_docs_frontmatter.py  add_familiar_id.py  anthropic_cost_tracker.py  apply_sql_migrations.py  audit_groqspend.py  base_walk_reminder.py  benchmark_helix.py  benchmark_helix_trial2.py  bot-prompt.txt  bot-smoke-test.txt  build_hcat.sh  bump_version.py  call_narrator_context.py  caveman.py  check_beeminder.py  check_neon_budget.py  chunk_session_logs.py  cloud_enable_beeminder.py  clozemaster_scraper.py  complete_goal.sh  correct_may_spend.py  debug_twilio_messages.py  debug_whatsapp_content.py  encrypt_beeminder.py  encrypt_creds.py  evaluate_aider.py  fix_body_extraction.py  fix_collect.py  fix_dbvalue_deref.py  fix_final_surgical.py  fix_final_types.py  fix_incoming_body.py  fix_missing_awaits.py  fix_mut_rs.py  fix_or_else.py  fix_pg_and_dbvalue.py  fix_pg_rows_privacy.py  fix_query_await.py  fix_remaining_headers_and_bodies.py  fix_responses_v6.py  (+50 more)
services/: arabic_skip_counter.py  auth_server.py  auth_service.py  auth_utils.py  budget_governor.py  coaching_service.py  credentials_manager.py  encryption_service.py  health_checker.py  language_sync_service.py  neon_sync_checker.py  rag_generator.py  rag_retriever.py  reminder_service.py  review_pump.py  secret_manager.py  semantic_index.py  smart_nag.py  token_bank.py  weather_service.py
specs/: sunkworks_episode_84_plan.md
tests/: conftest.py  debug_e2e.py  e2e_pi_mecris.md  e2e_pi_mecris.sh  integration_mcp.py  test_add_docs_frontmatter.py  test_add_familiar_id.py  test_akamai_security.py  test_anthropic_cost_tracker.py  test_approved_templates.json  test_arabic_skip_count.py  test_arabic_skip_counter_component.py  test_archivist.py  test_ask_mecris.py  (+125 more)
(+337 files in other folders)
