[project]
name = "mecris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "playwright>=1.55.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "twilio>=8.0.0",
    "uvicorn>=0.24.0",
]
