[project]
name = "mecris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.0",
    "fastapi>=0.104.0",
    "flask>=3.0.3",
    "httpx>=0.25.0",
    "playwright>=1.55.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "twilio>=8.0.0",
    "uvicorn>=0.24.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests", "test_*.py"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
