[project]
name = "mecris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.0",
    "fastapi>=0.100.0",
    "flask>=3.0.3",
    "httpx>=0.25.0",
    "playwright>=1.55.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "twilio>=8.0.0",
    "uvicorn>=0.22.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "dotenv>=0.9.9",
    "numpy>=1.24.0",
    "pyperclip>=1.8.2",
    "sounddevice>=0.4.6",
    "keyboard>=0.13.5",
    "scipy>=1.10.0",
    "pynput>=1.7.6",
    "faster-whisper>=0.10.0",
    "python-multipart>=0.0.6",
    "pyautogui>=0.9.53 ; sys_platform != 'linux'",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests", "test_*.py"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
