[package]
name = "budget-governor-rs"
version = "0.1.0"
authors = ["Rust-Brain Purist"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "5.2.0"
thiserror = "1.0"
