[package]
name = "sync-service"
authors = ["Kingdon B <kingdon@urmanac.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22.1"
hmac = "0.12.1"
p384 = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
spin-sdk = "5.2.0"

[workspace]
