[package]
name = "sync-service"
authors = ["Kingdon B <kingdon@urmanac.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["std"] }
hmac = "0.12.1"
html-escape = "0.2.13"
p384 = "0.13.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
jsonwebtoken = { version = "9.3.0", default-features = false }
spin-sdk = "5.2.0"
spin-cron-sdk = { git = "https://github.com/fermyon/spin-trigger-cron" }
urlencoding = "2.1.3"

[workspace]
