[package]
name = "sync-service"
authors = ["Kingdon B <kingdon@urmanac.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["std"] }
chrono-tz = "0.10.0"
hmac = "0.13.0"
html-escape = "0.2.13"
p384 = "0.13.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11"
sha2 = "0.11.0"
jwt-simple = "0.12.11"
aes-gcm = "0.10.3"
hex = "0.4.3"
getrandom = "0.4.0"
spin-sdk = "5.0.0"
spin-cron-sdk = { git = "https://github.com/fermyon/spin-trigger-cron" }
urlencoding = "2.1.3"
futures = "0.3.32"
http-body-util = "0.1.3"
bytes = "1.11.1"

[workspace]
